"Build file for HIP."

load("@rules_ll//ll:defs.bzl", "OFFLOAD_ALL_AMDGPU", "ll_binary", "ll_library")

# Target for the toolchains.
filegroup(
    name = "headers",
    srcs = glob(["include/**", "include/hip/hip_version.h"]),
    visibility = ["//visibility:public"],
)

# Target for hipamd.
ll_library(
    name = "hip_headers",
    exposed_hdrs = [":headers"],
    exposed_angled_includes = ["include"],
    visibility = ["//visibility:public"],
)

ll_binary(
    name = "performance_compute_dot_product",
    srcs = [
        "tests/performance/compute/hipPerfDotProduct.cpp",
        "tests/src/test_common.cpp",
    ],
    hdrs = ["tests/src/test_common.h"],
    includes = ["tests/src"],
    compile_flags = OFFLOAD_ALL_AMDGPU + [
        "-std=c++17",
    ],
    compilation_mode = "hip_amdgpu",
)
